--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
     rev: 3.9.2
     hooks:
     -   id: flake8
-        args: [--max-line-length=120, --ignore=E203 E741 W503]
+        args: [--ignore=E203 E741 W503 E501]
         language_version: python3
 
 -   repo: https://github.com/asottile/reorder_python_imports
