--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
     hooks:
     -   id: flake8
         args: [--ignore=E203 E741 W503 E501]
+        exclude: ^pc_grad/
         language_version: python3
 
 -   repo: https://github.com/asottile/reorder_python_imports
