Added ignore to build dir

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ scripts/job_submission_template.py
 /scripts/ke_training.sh
 /scripts/ke_submission_template.py
 /scripts/create_hyperparameters.py
+/build
