Added linear probe name

--- a/.gitignore
+++ b/.gitignore
@@ -11,48 +11,5 @@ augmented_dataset
 .DS_Store
 ke/.DS_Store
 ke/manual_introspection/.DS_Store
-ke/manual_introspection/plots/all_layers_modded.svg
-ke/manual_introspection/plots/all_layers.pdf
-ke/manual_introspection/plots/cross_seed_reg_2_non_reg__layer_9_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/cross_seed_reg_2_non_reg__layer_9_tdepth_1_expvar_1..pdf
-ke/manual_introspection/plots/cross_seed_reg_2_reg__layer_9_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/cross_seed_reg_2_reg__layer_9_tdepth_1_expvar_1..pdf
-ke/manual_introspection/plots/in_seed_non_reg_to_reg__layer_9_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/in_seed_non_reg_to_reg__layer_9_tdepth_1_expvar_1..pdf
-ke/manual_introspection/plots/layer_0to16_tdepth_9_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_0to16_tdepth_9_expvar_1.pdf
-ke/manual_introspection/plots/layer_1_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_1_tdepth_1_expvar_1.pdf
-ke/manual_introspection/plots/layer_3_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_3_tdepth_1_expvar_1.pdf
-ke/manual_introspection/plots/layer_3to15_tdepth_9_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_3to15_tdepth_9_expvar_1.pdf
-ke/manual_introspection/plots/layer_5_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_5_tdepth_1_expvar_1.pdf
-ke/manual_introspection/plots/layer_5to13_tdepth_9_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_5to13_tdepth_9_expvar_1.pdf
-ke/manual_introspection/plots/layer_7_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_7_tdepth_1_expvar_1.pdf
-ke/manual_introspection/plots/layer_7to11_tdepth_9_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_7to11_tdepth_9_expvar_1.pdf
-ke/manual_introspection/plots/layer_9_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_9_tdepth_1_expvar_1.pdf
-ke/manual_introspection/plots/layer_9_tdepth_3_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_9_tdepth_3_expvar_1.pdf
-ke/manual_introspection/plots/layer_9_tdepth_5_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_9_tdepth_5_expvar_1.pdf
-ke/manual_introspection/plots/layer_9_tdepth_7_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_9_tdepth_7_expvar_1.pdf
-ke/manual_introspection/plots/layer_9_tdepth_9_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_9_tdepth_9_expvar_1.pdf
-ke/manual_introspection/plots/layer_9to9_tdepth_9_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_9to9_tdepth_9_expvar_1.pdf
-ke/manual_introspection/plots/layer_11_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_11_tdepth_1_expvar_1.pdf
-ke/manual_introspection/plots/layer_13_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_13_tdepth_1_expvar_1.pdf
-ke/manual_introspection/plots/layer_15_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/layer_15_tdepth_1_expvar_1.pdf
-ke/manual_introspection/plots/multi_layer_regularization_joint_plot.pdf
-ke/manual_introspection/plots/non_reg_2_non_reg__layer_9_tdepth_1_expvar_1_no_cbar.pdf
-ke/manual_introspection/plots/non_reg_2_non_reg__layer_9_tdepth_1_expvar_1..pdf
+*.pdf
+*.png
