--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
     rev: 3.9.2
     hooks:
     -   id: flake8
-        args: [--ignore=E203 E741 W503 E501]
+        args: [--ignore=E203 E741 W503 E501 F541]
         exclude: ^pc_grad/
         language_version: python3
 
