--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ seaborn
 scikit-image
 scikit-learn
 scipy
-pytorch-lightning>=1.3.8
+pytorch-lightning==1.9.5
 pre-commit>=2.15.0
 # randaugment==1.0.2
 gitpython
