Added black line-length 118 to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,5 +20,8 @@ classifiers = [
 [project.urls]
 "Homepage" = "https://git.dkfz.de/mic/personal/group2/tassilow/knowledge_extension"
 
+[tool.black]
+line-length = 118
+
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
