ignoring submission scripts

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ augmented_dataset
 *.tex
 *.DS_Store
 ke/manual_introspection/plots/all_layers_modded.svg
+ke/manual_introspection/iclr24/job_submission_scripts/5_ensembles.py
