--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,7 +23,7 @@ repos:
     hooks:
       - id: flake8
         args: [--ignore=E203 E741 W503 E501 F541 E402]
-        exclude: ^pc_grad/
+        exclude: ^vision/
         language_version: python3
 
   - repo: https://github.com/asottile/reorder_python_imports
