--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy
 scipy
-torch>=2.2
+torch==2.0.1
 torchvision
 pytorch-lightning==1.9.5
 pandas
@@ -18,21 +18,17 @@ black==21.7b0
 geometry-score @ git+https://github.com/KhrulkovV/geometry-score
 msid @ git+https://github.com/xgfs/imd
 
-
+torch_geometric
+ogb
 
 six
-torch
 tensorboard
-pandas
 pytest
 tqdm
 matplotlib
 seaborn
 scikit-image
 scikit-learn
-scipy
-pytorch-lightning==1.9.5
-pre-commit>=2.15.0
 # randaugment==1.0.2
 gitpython
 opencv-python
@@ -47,7 +43,6 @@ numpy
 chardet
 setuptools
 Pillow
-torchvision
 plotly
 loguru
 hug
