Inclusion of training of a model with shortcuts.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,33 @@ __pycache__/*
 ._.DS_Store
 .DS_Store
 experiments
+vision/data/shortcuts/example_imgs/color_dot_cifar10_0.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_1.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_2.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_3.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_4.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_5.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_6.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_7.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_8.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_9.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_10.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_11.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_12.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_13.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_14.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_15.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_16.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_17.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_18.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_19.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_20.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_21.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_22.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_23.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_24.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_25.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_26.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_27.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_28.png
+vision/data/shortcuts/example_imgs/color_dot_cifar10_29.png
