--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ scipy
 torch==2.0.1
 torchvision
 pytorch-lightning==1.9.5
+pyarrow
 pandas
 
 pytest
@@ -39,4 +40,5 @@ Pillow
 plotly
 loguru
 hug
+huggingface_hub
 jsonlines
