--- a/nlp/config/dataset/sst2.yaml
+++ b/nlp/config/dataset/sst2.yaml
@@ -2,7 +2,8 @@ path: sst2 # huggingface load_dataset argument: path
 name: # huggingface load_dataset argument: name
 split: test
 prompt_template: # promptsource template name
-feature_column: sentence
+feature_column:
+  - "sentence"
 target_column: label
 
 # Hyperparameters for the finetuning of BERT on this dataset
