Nlp augmentation test (#20)
* save results at intermediate steps; draft for argparse

Otherwise dependent on full execution of experiment

* training with augmentation

- EasyDataAugmentation via textattack
- langtest evaluation for more realistic augmentation

* add missing requirements

* add skeleton for augmentation experiment [wip]

* add configs for augmentation experiment

* working comparison of augmented models

- fixes small bugs in several files
- somewhat cleaned up get_representations to be integrated into registry.py

* fix handling of local datasets

* add augmentation for mnli

* move augmentation to Dataset

* add missing requirement

* fix graph dependencies, indentation

* add sst2 clean finetuned models to config

* add notebook to clean up checkpoints

* update notebook to store (augmented) datasets as well

* add models and datasets to augmentation config

* fix identifiers of NLPModels for experimentStorer

* add accuracy validation of augmented sst2 models

* training with local datasets

* fix local dataset loading

* fix mnli finetuning

--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,22 @@ loguru
 hug
 huggingface_hub
 jsonlines
+textattack
+sentence_transformers
+hydra-core
+ipykernel
+huggingface-hub
+ipywidgets
+pyarrow
+tokenizers
+datasets
+transformers
+Cython
+gudhi
+evaluate
+accelerate
+albumentations
+langtest
+torch_geometric
+torch_eval
+ogb
