add training for memorizing models

--- a/nlp/config/finetune.yaml
+++ b/nlp/config/finetune.yaml
@@ -7,3 +7,7 @@ defaults:
 output_dir: ${hydra:runtime.output_dir}
 shortcut_rate: 0.0
 shortcut_seed: 0
+
+memorization_rate: 0.0
+memorization_n_new_labels: 5
+memorization_seed: 0
