--- a/repsim/configs/hierarchical_vision_shortcuts.yaml
+++ b/repsim/configs/hierarchical_vision_shortcuts.yaml
@@ -14,11 +14,19 @@ experiments:
       seed:
         - 0
         - 1
-        - 2
-        - 3
-        - 4
+        # - 2
+        # - 3
+        # - 4
       domain: VISION
     grouping_keys:  # Separates the trained models by this key into groups for the `GroupSeparationExperiment`.
       - train_dataset
     separation_keys:  # Creates a separate experiment for each unique value of the key.
       - architecture
+
+table_creation:
+  row_index: measure  # The key to use as the row index in the table.
+  columns: # The keys to use as columns (can be list[str] or a str)
+    - quality_measure
+    - architecture
+  value_key: value  # The key specifying the value that fills the table (non-header/index values)
+  filename: vision_shortcut.xlsx  # Can be [.xlsx / .csv / .tex] file extension
