- Switch from partial(callable) to abstractmethod for the SingleLayerRepresentations! - Break circular imports through TYPE_CHECKING; - Add possibility to run metrics in a parallelized manner. Currently some measures are slow and don't use all cores --> Multiprocess!

--- a/repsim/configs/hierarchical_vision_shortcuts.yaml
+++ b/repsim/configs/hierarchical_vision_shortcuts.yaml
@@ -1,5 +1,8 @@
 # Holds all information needed to run experiments.
-measures: all
+excluded_measures:
+  - SVCCA
+  - PWCCA
+threads: 8
 experiments:
   - name: Vision Short Cut Experiments
     type: GroupSeparationExperiment  # Defines the type of experiment class to use
