Exclude metrics that take ages to actually get results for Friday

--- a/repsim/configs/hierarchical_vision_shortcuts.yaml
+++ b/repsim/configs/hierarchical_vision_shortcuts.yaml
@@ -2,7 +2,11 @@
 excluded_measures:
   - SVCCA
   - PWCCA
-threads: 8
+  - EigenspaceOverlapScore
+  - GeometryScore
+  - IMDScore
+  - LinearRegression
+threads: 1
 experiments:
   - name: Vision Short Cut Experiments
     type: GroupSeparationExperiment  # Defines the type of experiment class to use
