--- a/repsim/configs/hierarchical_vision_shortcuts.yaml
+++ b/repsim/configs/hierarchical_vision_shortcuts.yaml
@@ -1,27 +1,32 @@
 # Holds all information needed to run experiments.
-excluded_measures:
-  - SVCCA
-  - PWCCA
-  - EigenspaceOverlapScore
-  - GeometryScore
-  - IMDScore
-  - LinearRegression
-  - Gulp
-  - AlignedCosineSimilarity
-  - OrthogonalAngularShapeMetricCentered
-  - OrthogonalProcrustesCenteredAndNormalized
-  - ProcrustesSizeAndShapeDistance
-  - RSMNormDifference
-  - ConcentricityDifference
-  - UniformityDifference
+included_measures:
+  - CKA
+# excluded_measures:
+#   - SVCCA
+#   - PWCCA
+#   - EigenspaceOverlapScore
+#   - GeometryScore
+#   - IMDScore
+#   - LinearRegression
+#   - Gulp
+#   - AlignedCosineSimilarity
+#   - OrthogonalAngularShapeMetricCentered
+#   - OrthogonalProcrustesCenteredAndNormalized
+#   - ProcrustesSizeAndShapeDistance
+#   - RSMNormDifference
+#   - ConcentricityDifference
+#   - UniformityDifference
 threads: 1
-cache: True
+cache_to_disk: True
+cache_to_mem: False
 only_extract_reps: False
 experiments:
   - name: Vision Short Cut Experiments
     type: GroupSeparationExperiment  # Defines the type of experiment class to use
     representation_dataset: "ColorDot_0_CIFAR10DataModule"
     filter_key_vals:  # Only keeps models that have any of the values for the keys.
+      architecture:
+        - ResNet18
       train_dataset:
         - ColorDot_100_CIFAR10DataModule
         - ColorDot_75_CIFAR10DataModule
