--- a/repsim/configs/nlp_augmentation_sst2.yaml
+++ b/repsim/configs/nlp_augmentation_sst2.yaml
@@ -5,11 +5,20 @@ excluded_measures:
   - IMDScore
   - LinearRegression
 threads: 1
+cache_to_disk: False
+cache_to_mem: True
+only_extract_reps: False
 experiments:
   - name: NLP SST2 Augmentation Experiments
     type: GroupSeparationExperiment # Defines the type of experiment class to use
     representation_dataset: "sst2_aug_rate0"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
+      identifier:
+        - Augmentation_0
+        - Augmentation_25
+        - Augmentation_50
+        - Augmentation_75
+        - Augmentation_100
       train_dataset:
         - "sst2"
         - "sst2_aug_rate025"
