--- a/repsim/configs/nlp_memorization_sst2.yaml
+++ b/repsim/configs/nlp_memorization_sst2.yaml
@@ -5,11 +5,20 @@ excluded_measures:
   - IMDScore
   - LinearRegression
 threads: 1
+cache_to_disk: False
+cache_to_mem: True
+only_extract_reps: False
 experiments:
   - name: NLP SST2 Memorization Experiments
     type: GroupSeparationExperiment # Defines the type of experiment class to use
     representation_dataset: "sst2_mem_rate0"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
+      identifier:
+        - RandomLabels_0
+        - RandomLabels_25
+        - RandomLabels_50
+        - RandomLabels_75
+        - RandomLabels_100
       train_dataset:
         - "sst2"
         - "sst2_mem_rate025"
@@ -27,7 +36,7 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: nlp_mem_sst2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: nlp_mem_sst2_v2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   row_index: similarity_measure # The key to use as the row index in the table.
