--- a/repsim/configs/nlp_shortcuts_debug.yaml
+++ b/repsim/configs/nlp_shortcuts_debug.yaml
@@ -2,6 +2,9 @@
 included_measures:
   - CKA
 threads: 1
+cache_to_disk: False
+cache_to_mem: True
+only_extract_reps: False
 experiments:
   - name: NLP Short Cut Experiments
     type: GroupSeparationExperiment # Defines the type of experiment class to use
