--- a/repsim/configs/graphs_randomlabel_flickr.yaml
+++ b/repsim/configs/graphs_randomlabel_flickr.yaml
@@ -1,12 +1,12 @@
 # Holds all information needed to run experiments.
-threads: 1
+threads: 64
 cache_to_disk: False
 cache_to_mem: True
 only_extract_reps: False
 experiments:
-  - name: Label Experiment Cora
+  - name: Label Experiment Flickr
     type: GroupSeparationExperiment # Defines the type of experiment class to use
-    representation_dataset: "cora"
+    representation_dataset: "flickr"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
       identifier:
         - Normal
@@ -15,7 +15,7 @@ experiments:
         - RandomLabels_75
         - RandomLabels_100
       train_dataset:
-        - "cora"
+        - "flickr"
       seed:
         - 0
         - 1
@@ -27,11 +27,11 @@ experiments:
       - identifier
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: random_labels_cora.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: random_labels_flickr.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: random_labels_cora_full.csv
+  full_df_filename: random_labels_flickr_full.csv
   # ---
   save_aggregated_df: False
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -39,4 +39,4 @@ table_creation:
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: random_labels_cora.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: random_labels_flickr.csv # Can be [.xlsx / .csv / .tex] file extension
