--- a/repsim/configs/graphs_shortcut_cora.yaml
+++ b/repsim/configs/graphs_shortcut_cora.yaml
@@ -4,16 +4,16 @@ cache_to_disk: False
 cache_to_mem: True
 only_extract_reps: False
 experiments:
-  - name: Label Experiment Cora
+  - name: Shortcut Experiment Cora
     type: GroupSeparationExperiment # Defines the type of experiment class to use
     representation_dataset: "cora"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
       identifier:
-        - Normal
-        - RandomLabels_25
-        - RandomLabels_50
-        - RandomLabels_75
-        - RandomLabels_100
+        - Shortcut_0
+        - Shortcut_25
+        - Shortcut_50
+        - Shortcut_75
+        - Shortcut_100
       train_dataset:
         - "cora"
       seed:
@@ -27,11 +27,11 @@ experiments:
       - identifier
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: random_labels_cora.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: shortcut_cora.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: random_labels_cora_full.csv
+  full_df_filename: shortcut_cora_full.csv
   # ---
   save_aggregated_df: False
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -39,4 +39,4 @@ table_creation:
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: random_labels_cora.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: shortcut_cora.csv # Can be [.xlsx / .csv / .tex] file extension
