--- a/repsim/configs/graphs_randomlabel_flickr.yaml
+++ b/repsim/configs/graphs_randomlabel_flickr.yaml
@@ -1,4 +1,9 @@
 # Holds all information needed to run experiments.
+excluded_measures:
+  - RSMNormDifference
+  - GeometryScore
+  - IMDScore
+  - PWCCA
 threads: 1
 cache_to_disk: False
 cache_to_mem: True
