--- a/repsim/configs/monotonicity_nlp_standard_sst2_cls_tok.yaml
+++ b/repsim/configs/monotonicity_nlp_standard_sst2_cls_tok.yaml
@@ -1,48 +1,37 @@
 # Holds all information needed to run experiments.
-included_measures:
-  - CKA
-# excluded_measures:
-#   # - EigenspaceOverlapScore
-#   # - GeometryScore
-#   - IMDScore
-#   - LinearRegression
+excluded_measures:
+  - GeometryScore
+  # - IMDScore
+  - LinearRegression
 threads: 1
 cache_to_disk: False
 cache_to_mem: True
 only_extract_reps: False
 experiments:
-  - name: NLP SST2 Augmentation Experiments
+  - name: NLP SST2 Monotonicity Experiment (Using only CLS Token)
     type: MonotonicityExperiment # Defines the type of experiment class to use
-    representation_dataset: "sst2_aug_rate0"
+    representation_dataset: "sst2"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
       identifier:
-        - Augmentation_0
-        # - Augmentation_25
-        # - Augmentation_50
-        # - Augmentation_75
-        # - Augmentation_100
+        - Augmentation_0 # These models are set to only use the CLS token for representation comparison, but trained on the standard dataset
       train_dataset:
         - "sst2"
-        # - "sst2_aug_rate025"
-        # - "sst2_aug_rate05"
-        # - "sst2_aug_rate075"
-        # - "sst2_aug_rate10"
       seed:
         - 0
         - 1
-        # - 2
-        # - 3
-        # - 4
+        - 2
+        - 3
+        - 4
       domain: NLP
     grouping_keys: # Separates the trained models by this key into groups for the `GroupSeparationExperiment`.
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: monotonicity_nlp_aug_sst2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: mono_nlp_standard_cls_tok_sst2.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: monotonicity_nlp_aug_sst2_full.csv
+  full_df_filename: mono_nlp_standard_cls_tok_sst2_full.csv
   # ---
   save_aggregated_df: True
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -50,4 +39,4 @@ table_creation:
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: nlp_mono_aug_sst2.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: mono_nlp_standard_cls_tok_sst2.csv # Can be [.xlsx / .csv / .tex] file extension
