--- a/repsim/configs/correlation_nlp_augmentation_sst2.yaml
+++ b/repsim/configs/correlation_nlp_augmentation_sst2.yaml
@@ -15,9 +15,9 @@ experiments:
     filter_key_vals: # Only keeps models that have any of the values for the keys.
       identifier:
         - Augmentation_0
-        - Augmentation_25
-        - Augmentation_50
-        - Augmentation_75
+        # - Augmentation_25
+        # - Augmentation_50
+        # - Augmentation_75
         - Augmentation_100
       train_dataset:
         - "sst2"
