--- a/repsim/configs/nlp_augmentation_mnli.yaml
+++ b/repsim/configs/nlp_augmentation_mnli.yaml
@@ -3,11 +3,12 @@ excluded_measures:
   # - EigenspaceOverlapScore
   - GeometryScore
   - IMDScore
-  - LinearRegression
+  # - LinearRegression
 threads: 1
 cache_to_disk: False
 cache_to_mem: True
 only_extract_reps: False
+rerun_nans: True
 experiments:
   - name: NLP mnli Augmentation Experiments
     type: GroupSeparationExperiment # Defines the type of experiment class to use
