--- a/repsim/configs/correlation_nlp_standard_sst2.yaml
+++ b/repsim/configs/correlation_nlp_standard_sst2.yaml
@@ -11,6 +11,7 @@ only_extract_reps: False
 experiments:
   - name: NLP SST2 Correlation Experiments
     type: OutputCorrelationExperiment # Defines the type of experiment class to use
+    use_acc_comparison: True
     representation_dataset: "sst2"
     filter_key_vals: # Only keeps models that have any of the values for the keys.
       identifier:
