--- a/repsim/configs/IN100_augmentation_extract.yaml
+++ b/repsim/configs/IN100_augmentation_extract.yaml
@@ -6,7 +6,7 @@ excluded_measures:
 threads: 1
 cache_to_disk: True
 cache_to_mem: False
-only_extract_reps: False
+only_extract_reps: True
 rerun_nans: True
 experiments:
   - name: Vision Gauss R18 IN100 Experiments
