--- a/repsim/configs/IN100_output_extract.yaml
+++ b/repsim/configs/IN100_output_extract.yaml
@@ -6,7 +6,7 @@ excluded_measures:
 threads: 1
 cache_to_disk: True
 cache_to_mem: False
-only_extract_reps: False
+only_extract_reps: True
 experiments:
   - name: Vision Output Correlation
     type: OutputCorrelationExperiment  # Defines the type of experiment class to use
