Clean and finalized vision configs

--- a/repsim/configs/IN100_accoutput.yaml
+++ b/repsim/configs/IN100_accoutput.yaml
@@ -5,10 +5,11 @@ excluded_measures:
 threads: 1
 cache_to_disk: True
 cache_to_mem: False
-only_extract_reps: True
+only_extract_reps: False
 experiments:
   - name: Vision Output Correlation
     type: OutputCorrelationExperiment  # Defines the type of experiment class to use
+    use_acc_comparison: True
     representation_dataset: "ImageNet100"
     filter_key_vals:  # Only keeps models that have any of the values for the keys.
       architecture:
@@ -35,7 +36,7 @@ experiments:
       domain: VISION
     separation_keys:  # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: in100_output.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: in100_accoutput.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 
 table_creation:
@@ -47,6 +48,6 @@ table_creation:
     - quality_measure
     - architecture
   value_key: corr  # The key specifying the value that fills the table (non-header/index values)
-  filename: in100_output.xlsx  # Can be [.xlsx / .csv / .tex] file extension
+  filename: in100_accoutput.xlsx  # Can be [.xlsx / .csv / .tex] file extension
   save_full_df: True
-  full_df_filename: in100_output.csv
+  full_df_filename: in100_accoutput.csv
