--- a/repsim/configs/IN100_vision_r18_monotonicity.yaml
+++ b/repsim/configs/IN100_vision_r18_monotonicity.yaml
@@ -1,27 +1,19 @@
 # Holds all information needed to run experiments.
-excluded_measures:
-  - PWCCA
-  - GeometryScore
+included_measures:
+  - CKA
 threads: 1
 cache_to_disk: True
-cache_to_mem: False
+cache_to_mem: True
 only_extract_reps: True
-rerun_nans: True
 experiments:
-  - name: Monotonicity Experiment
-    type: MonotonicityExperiment # Defines the type of experiment class to use
+  - name: R18 IN100 Monotonicity
+    type: SameLayerExperiment # Defines the type of experiment class to use
     representation_dataset: "ImageNet100"
     filter_key_vals:  # Only keeps models that have any of the values for the keys.
       train_dataset:
         - ImageNet100
       architecture:
-        - ViT_L32
-        - ViT_B32
         - ResNet18
-        - ResNet34
-        - ResNet101  # ResNet 101 seed 0 is missing currently.
-        - VGG11
-        - VGG19
       seed:
         - 0
         - 1
@@ -34,15 +26,13 @@ experiments:
         - 8
         - 9
       domain: VISION
-    grouping_keys: # Separates the trained models by this key into groups for the `GroupSeparationExperiment`.
-      - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: in100_monotonicity.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: in100_r18_monotonicity.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: in100_monotonicity.csv
+  full_df_filename: vision_correlation_shortcut_debug_full.csv
   # ---
   save_aggregated_df: False
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -50,4 +40,4 @@ table_creation:
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: in100_monotonicity.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: vision_shortcut_debug.csv # Can be [.xlsx / .csv / .tex] file extension
