Update accoutput configs to reuse comparisons done previously in output.yaml

--- a/repsim/configs/IN100_accoutput.yaml
+++ b/repsim/configs/IN100_accoutput.yaml
@@ -37,7 +37,7 @@ experiments:
       domain: VISION
     separation_keys:  # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: in100_accoutput.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: in100_output.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 
 table_creation:
@@ -49,6 +49,6 @@ table_creation:
     - quality_measure
     - architecture
   value_key: corr  # The key specifying the value that fills the table (non-header/index values)
-  filename: in100_accoutput.xlsx  # Can be [.xlsx / .csv / .tex] file extension
+  filename: in100_output.xlsx  # Can be [.xlsx / .csv / .tex] file extension
   save_full_df: True
-  full_df_filename: in100_accoutput.csv
+  full_df_filename: in100_output.csv
