--- a/repsim/configs/IN100_accoutput_vgg19.yaml
+++ b/repsim/configs/IN100_accoutput_vgg19.yaml
@@ -14,9 +14,7 @@ experiments:
     representation_dataset: "ImageNet100"
     filter_key_vals:  # Only keeps models that have any of the values for the keys.
       architecture:
-        - ResNet18
-        - ResNet34
-        - ResNet101  # ResNet 101 seed 0 is missing currently.
+        - VGG19
       train_dataset:
         - ImageNet100
       seed:
@@ -33,7 +31,7 @@ experiments:
       domain: VISION
     separation_keys:  # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: in100_output.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: in100_output_vgg19.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 
 table_creation:
@@ -45,6 +43,6 @@ table_creation:
     - quality_measure
     - architecture
   value_key: corr  # The key specifying the value that fills the table (non-header/index values)
-  filename: in100_output.xlsx  # Can be [.xlsx / .csv / .tex] file extension
+  filename: in100_output_vgg19.xlsx  # Can be [.xlsx / .csv / .tex] file extension
   save_full_df: True
-  full_df_filename: in100_output.csv
+  full_df_filename: in100_output_vgg19.csv
