--- a/repsim/configs/IN100_accoutput_vitl32.yaml
+++ b/repsim/configs/IN100_accoutput_vitl32.yaml
@@ -1,13 +1,11 @@
 # Holds all information needed to run experiments.
 excluded_measures:
-  - PWCCA
   - GeometryScore
   - IMDScore
 threads: 1
-cache_to_disk: False
+cache_to_disk: True
 cache_to_mem: False
 only_extract_reps: False
-rerun_nans: True
 experiments:
   - name: Vision Output Correlation
     type: OutputCorrelationExperiment  # Defines the type of experiment class to use
@@ -16,12 +14,6 @@ experiments:
     filter_key_vals:  # Only keeps models that have any of the values for the keys.
       architecture:
         - ViT_L32
-        - ViT_B32
-        - ResNet18
-        - ResNet34
-        - ResNet101  # ResNet 101 seed 0 is missing currently.
-        - VGG11
-        - VGG19
       train_dataset:
         - ImageNet100
       seed:
@@ -38,7 +30,7 @@ experiments:
       domain: VISION
     separation_keys:  # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: in100_output.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: in100_output_vitl32.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 
 table_creation:
@@ -50,6 +42,6 @@ table_creation:
     - quality_measure
     - architecture
   value_key: corr  # The key specifying the value that fills the table (non-header/index values)
-  filename: in100_output.xlsx  # Can be [.xlsx / .csv / .tex] file extension
+  filename: in100_output_vitl32.xlsx  # Can be [.xlsx / .csv / .tex] file extension
   save_full_df: True
-  full_df_filename: in100_output.csv
+  full_df_filename: in100_output_vitl32.csv
