--- a/repsim/configs/IN100_shortcut_vitb32.yaml
+++ b/repsim/configs/IN100_shortcut_vitb32.yaml
@@ -32,11 +32,11 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: in100_shortcut.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: in100_shortcut_vitb32.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: in100_shortcut.csv
+  full_df_filename: in100_shortcut_vitb32.csv
   # ---
   save_aggregated_df: False
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -44,4 +44,4 @@ table_creation:
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: in100_shortcut.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: in100_shortcut_vitb32.csv # Can be [.xlsx / .csv / .tex] file extension
