--- a/repsim/configs/IN100_augmentation.yaml
+++ b/repsim/configs/IN100_augmentation.yaml
@@ -1,13 +1,7 @@
 # Holds all information needed to run experiments.
 excluded_measures:
-  - PWCCA
   - GeometryScore
-  - IMDScore
-threads: 1
-cache_to_disk: True
-cache_to_mem: False
-only_extract_reps: False
-rerun_nans: True
+only_eval: True
 experiments:
   - name: Vision Gauss R18 IN100 Experiments
     type: GroupSeparationExperiment # Defines the type of experiment class to use
@@ -15,10 +9,8 @@ experiments:
     filter_key_vals:  # Only keeps models that have any of the values for the keys.
       train_dataset:
         - Gauss_Max_ImageNet100DataModule
-        - Gauss_L_ImageNet100DataModule
         - Gauss_M_ImageNet100DataModule
         - Gauss_S_ImageNet100DataModule
-        - Gauss_Off_ImageNet100DataModule
       architecture:
         - ViT_L32
         - ViT_B32
@@ -38,13 +30,13 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: in100_augment.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: final.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
   full_df_filename: in100_augment.csv
   # ---
-  save_aggregated_df: False
+  save_aggregated_df: True
   row_index: similarity_measure # The key to use as the row index in the table.
   columns: # The keys to use as columns (can be list[str] or a str)
     - identifier
