--- a/repsim/configs/IN100_monotonicity.yaml
+++ b/repsim/configs/IN100_monotonicity.yaml
@@ -1,13 +1,7 @@
 # Holds all information needed to run experiments.
 excluded_measures:
-  - PWCCA
   - GeometryScore
-  - IMDScore
-threads: 1
-cache_to_disk: True
-cache_to_mem: False
-only_extract_reps: False
-rerun_nans: True
+only_eval: True
 experiments:
   - name: Monotonicity Experiment
     type: MonotonicityExperiment # Defines the type of experiment class to use
@@ -39,7 +33,7 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: in100_monotonicity.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: final.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
