--- a/repsim/configs/IN100_randomlabel_vitl32.yaml
+++ b/repsim/configs/IN100_randomlabel_vitl32.yaml
@@ -1,11 +1,16 @@
 # Holds all information needed to run experiments.
 excluded_measures:
   - GeometryScore
+  - IMDScore
+  - RSMNormDifference
+  - DistanceCorrelation
+  - RSA
+  - CKA
 threads: 1
 cache_to_disk: True
 cache_to_mem: False
 only_extract_reps: False
-rerun_nans: False
+rerun_nans: True
 experiments:
   - name: Vision Short Cut Correlation Experiments
     type: GroupSeparationExperiment # Defines the type of experiment class to use
