--- a/repsim/configs/IN100_shortcut.yaml
+++ b/repsim/configs/IN100_shortcut.yaml
@@ -1,11 +1,7 @@
 # Holds all information needed to run experiments.
 excluded_measures:
   - GeometryScore
-threads: 1
-cache_to_disk: True
-cache_to_mem: False
-only_extract_reps: True
-rerun_nans: True
+only_eval: True
 experiments:
   - name: Vision Short Cut Correlation Experiments
     type: GroupSeparationExperiment # Defines the type of experiment class to use
@@ -34,16 +30,18 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: in100_shortcut.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: final.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
   full_df_filename: in100_shortcut.csv
   # ---
-  save_aggregated_df: False
+  save_aggregated_df: True
   row_index: similarity_measure # The key to use as the row index in the table.
   columns: # The keys to use as columns (can be list[str] or a str)
+    - identifier
+    - representation_dataset
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: in100_shortcut.csv # Can be [.xlsx / .csv / .tex] file extension
+  filename: in100_shortcut.xlsx # Can be [.xlsx / .csv / .tex] file extension
