--- a/repsim/configs/IN100_shortcut_resnet101.yaml
+++ b/repsim/configs/IN100_shortcut_resnet101.yaml
@@ -1,6 +1,13 @@
 # Holds all information needed to run experiments.
 excluded_measures:
   - GeometryScore
+  - IMDScore
+  - RSMNormDifference
+  - DistanceCorrelation
+  - RSA
+  - CKA
+  - SVCCA
+  - PWCCA
 threads: 1
 cache_to_disk: True
 cache_to_mem: False
