--- a/repsim/long_configs/IN100_augmentation_resnet101_C.yaml
+++ b/repsim/long_configs/IN100_augmentation_resnet101_C.yaml
@@ -23,10 +23,7 @@ experiments:
   - architecture
   type: GroupSeparationExperiment
 included_measures:
-- PWCCA
-- RSA
-- CKA
-- SVCCA
+- IMDScore
 only_extract_reps: false
 raw_results_filename: in100_augment_resnet101.parquet
 rerun_nans: true
