--- a/repsim/long_configs/IN100_augmentation_vgg11_C.yaml
+++ b/repsim/long_configs/IN100_augmentation_vgg11_C.yaml
@@ -23,8 +23,7 @@ experiments:
   - architecture
   type: GroupSeparationExperiment
 included_measures:
-- RSA
-- CKA
+- IMDScore
 only_extract_reps: false
 raw_results_filename: in100_augment_vgg11.parquet
 rerun_nans: true
