--- a/repsim/long_configs/IN100_randomlabel_resnet101_B.yaml
+++ b/repsim/long_configs/IN100_randomlabel_resnet101_B.yaml
@@ -25,10 +25,8 @@ experiments:
   - architecture
   type: GroupSeparationExperiment
 included_measures:
-- PWCCA
-- RSA
-- CKA
-- SVCCA
+- RSMNormDifference
+- DistanceCorrelation
 only_extract_reps: false
 raw_results_filename: in100_randomlabel_resnet101.parquet
 rerun_nans: true
