--- a/repsim/long_configs/IN100_randomlabel_vgg19_B.yaml
+++ b/repsim/long_configs/IN100_randomlabel_vgg19_B.yaml
@@ -25,8 +25,8 @@ experiments:
   - architecture
   type: GroupSeparationExperiment
 included_measures:
-- RSA
-- CKA
+- RSMNormDifference
+- DistanceCorrelation
 only_extract_reps: false
 raw_results_filename: in100_randomlabel_vgg19.parquet
 rerun_nans: true
