--- a/repsim/long_configs/IN100_shortcut_resnet101_B.yaml
+++ b/repsim/long_configs/IN100_shortcut_resnet101_B.yaml
@@ -23,10 +23,8 @@ experiments:
   - architecture
   type: GroupSeparationExperiment
 included_measures:
-- PWCCA
-- RSA
-- CKA
-- SVCCA
+- RSMNormDifference
+- DistanceCorrelation
 only_extract_reps: false
 raw_results_filename: in100_shortcut_resnet101.parquet
 rerun_nans: true
