--- a/repsim/long_configs/IN100_shortcut_vitl32_B.yaml
+++ b/repsim/long_configs/IN100_shortcut_vitl32_B.yaml
@@ -23,8 +23,8 @@ experiments:
   - architecture
   type: GroupSeparationExperiment
 included_measures:
-- RSA
-- CKA
+- RSMNormDifference
+- DistanceCorrelation
 only_extract_reps: false
 raw_results_filename: in100_shortcut_vitl32.parquet
 rerun_nans: true
