--- a/repsim/configs/IN100_accoutput_extract.yaml
+++ b/repsim/configs/IN100_accoutput_extract.yaml
@@ -1,20 +1,24 @@
 # Holds all information needed to run experiments.
-excluded_measures:
-  - GeometryScore
-  - IMDScore
+included_measures:
+  - CKA
 threads: 1
 cache_to_disk: True
 cache_to_mem: False
-only_extract_reps: False
+only_extract_reps: True
 experiments:
   - name: Vision Output Correlation
     type: OutputCorrelationExperiment  # Defines the type of experiment class to use
-    use_acc_comparison: True
     representation_dataset: "ImageNet100"
+    use_acc_comparison: True
     filter_key_vals:  # Only keeps models that have any of the values for the keys.
       architecture:
         - ViT_L32
         - ViT_B32
+        - ResNet18
+        - ResNet34
+        - ResNet101  # ResNet 101 seed 0 is missing currently.
+        - VGG11
+        - VGG19
       train_dataset:
         - ImageNet100
       seed:
