Update configs to point to final vision parquets

--- a/repsim/configs/IN100_shortcut.yaml
+++ b/repsim/configs/IN100_shortcut.yaml
@@ -30,11 +30,11 @@ experiments:
       - train_dataset
     separation_keys: # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: final.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: vision_shortcut_final.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 table_creation:
   save_full_df: True
-  full_df_filename: in100_shortcut.csv
+  full_df_filename: vision_shortcut_final.csv
   # ---
   save_aggregated_df: True
   row_index: similarity_measure # The key to use as the row index in the table.
@@ -44,4 +44,4 @@ table_creation:
     - quality_measure
     - architecture
   value_key: value # The key specifying the value that fills the table (non-header/index values)
-  filename: in100_shortcut.xlsx # Can be [.xlsx / .csv / .tex] file extension
+  filename: vision_shortcut_final.xlsx # Can be [.xlsx / .csv / .tex] file extension
