--- a/repsim/configs/IN100_accoutput.yaml
+++ b/repsim/configs/IN100_accoutput.yaml
@@ -33,7 +33,7 @@ experiments:
       domain: VISION
     separation_keys:  # Creates a separate experiment for each unique value of the key.
       - architecture
-raw_results_filename: final.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
+raw_results_filename: vision_output_final.parquet # Must end with .parquet. The full results of all comparisons are stored in the results directory with this name
 
 
 table_creation:
@@ -45,6 +45,7 @@ table_creation:
     - quality_measure
     - architecture
   value_key: corr  # The key specifying the value that fills the table (non-header/index values)
-  filename: in100_output.xlsx  # Can be [.xlsx / .csv / .tex] file extension
+  filename: vision_output_final.xlsx  # Can be [.xlsx / .csv / .tex] file extension
   save_full_df: True
-  full_df_filename: in100_output.csv
+  save_aggregated_df: True
+  full_df_filename: vision_output_final.csv
